[package]
name = "bgpd-app"
version = "0.1.0"
edition = "2021"
description = "Standalone BGPD  executable"
license = "GPL-3"

[dependencies]
tokio =  { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
clap = {  version = "4.5.18", features = ["derive"] }
duration-string = "0.4.0"
tempdir = "0.3.7"
bgpd = { path = "../bgpd"}
file-config = { path = "../file-config"}